# LogicScanner

./: .env.logiclab.example  .gitignore  ARCHITECTURE.md  README.md  alembic.ini  docker-compose.logiclab.yml  kientruc.md  pyproject.toml
engagements/: tls-ids-lab.yaml  tls-ids.yaml
gan-harness/: eval-rubric.md  spec.md
migrations/: env.py
migrations/versions/: 20260716_0001_initial.py  20260716_0002_repository_intelligence.py  20260716_0003_verifications.py
quality/: gan-code-only-rubric.md
scripts/: quality-gate.ps1
src/logiclab/: __init__.py  api.py  artifacts.py  cli.py  commands.py  config.py  experiments.py  harness.py  intelligence.py  lab.py  ollama.py  orchestrator.py  profiles.py  proposals.py  regression.py  repository_analysis.py  roles.py  schema_export.py  schemas.py  security.py  snapshots.py  storage.py  workspace.py
src/logiclab/analyzers/: __init__.py  base.py  bash.py  compose.py  python.py  sql.py
tests/: test_analyzers.py  test_api.py  test_artifacts.py  test_cli.py  test_commands.py  test_experiments.py  test_harness.py  test_intelligence.py  test_lab.py  test_migrations.py  test_ollama.py  test_orchestrator.py  test_profiles.py  test_proposals.py  test_regression.py  test_repository_analysis.py  test_roles.py  test_schema_export.py  test_schemas.py  test_security.py  test_snapshots.py  test_storage.py  test_target_workspace.py  test_workspace.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
ui/src/api/: client.ts  queries.ts
(+16 files in other folders)
