[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "logiclab"
version = "0.1.0"
description = "Local-first security-logic experiment engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "dulwich>=0.24,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mysql-connector-python>=9.0,<10",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6,<7",
  "SQLAlchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
logiclab = "logiclab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/logiclab"]

[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "logiclab/ui_dist"
"migrations" = "logiclab/migrations"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: requires the isolated LogicLab target lab",
]

[tool.coverage.run]
branch = true
source = ["logiclab"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
